--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18",
     "@astrojs/mdx": "^0.17.2",
     "@astrojs/rss": "^2.1.1",
-    "@astrojs/sitemap": "^1.1.0"
+    "@astrojs/sitemap": "^1.1.0",
+    "@astrojs/solid-js": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.9",
+    "solid-js": "^1.7.2",
+    "tailwindcss": "^3.3.1",
+    "vditor": "^3.9.1"
   }
 }
